<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghost Hunter</string>
    <string name="action_settings">Settings</string>
    <string name="developer_info">Developers: Jeffrey Cannon, Aki Gao, Gene Rhee, Adrian Dan</string>
    <string name="school_info">University of Virginia CS 2110 Fall 2013</string>
    <string name="play_game">Play</string>
    <string name="health">Health:</string>
    <string name="score">Ghosts killed:</string>
    <string name="location_content_description">Center</string>
    <string name="high_score_label">High Score</string>
    <string name="level_picker_title">Difficulty Level:</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>

</resources>
