<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_level_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    
    <RadioButton android:id="@+id/easy_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_level"
        android:textSize="20sp"
        />
    
    <RadioButton android:id="@+id/medium_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium_level"
        android:textSize="20sp"
        />
    
    <RadioButton android:id="@+id/hard_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_level"
        android:textSize="20sp"
        />
    
</RadioGroup>
