<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <fragment android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.SupportMapFragment" 
          />
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" 
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical" 
        android:background="@color/midnight"
        android:alpha="0.8" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:text="@string/health"
            android:textColor="@color/light"
            />
        
        <ProgressBar android:id="@+id/health_bar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="16dp"
	        android:layout_weight="4"
	        style="?android:attr/progressBarStyleHorizontal"
	        />
        
        <TextView android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:textColor="@color/light"
            />
        
        <ImageButton android:id="@+id/center_location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        style="?android:attr/buttonStyleSmall"
	        android:src="@drawable/location"
	        android:contentDescription="@string/location_content_description"
        />
        
    </LinearLayout>
    
</FrameLayout>